@@ -1,3 +1,9 @@
+2009-01-23  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Projects.Dom/CompilationUnit.cs:
+	* MonoDevelop.Projects.Dom/ICompilationUnit.cs: Added GetTypeAt method
+	to compilation unit.
+
 2009-01-22  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.Projects.Dom.Serialization/DomPersistence.cs: Limit the
